# 2022_sepsis_scRNA_validate

./: .gitignore  pyproject.toml  snakefile
figures/qc/: qc.csv
report/: report.Rmd  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
src/: create_anndata.py  download_raw_data.sh  draw_umaps.py  explore_metadata.R  gene_group_heatmap.py  load_anndata.py  merge_anndata.py  preprocess_metadata.py  process_anndata.py  util_anndata.py  util_qc.py
