[tool.poetry]
name = "2022_sepsis_scrna_validate"
version = "0.1.0"
description = ""
authors = ["mdsung <mdskylover@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
snakemake = "^7.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
