[tool.poetry]
name = "2022_sepsis_scrna_validate"
version = "0.1.0"
description = ""
authors = ["mdsung <mdskylover@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
snakemake = "^7.18.2"
scanpy = {extras = ["leiden"], version = "^1.9.1"}
numpy = "^1.23.4"
pandas = "^1.5.1"
harmonypy = "^0.0.6"
pynndescent = "^0.5.8"
pybiomart = "^0.2.0"
scrublet = "^0.2.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.17.1"
pytest = "^7.2.0"
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
